crabbing-interpreters/tests/testsuite/snapshots/testsuite__nonexistent_file__case_3_miri_ast.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: cargo
  args:
    - miri
    - run
    - "-q"
    - "--"
    - nonexistent_file
  env:
    MIRIFLAGS: "-Zmiri-disable-isolation -Zmiri-ignore-leaks"
---
success: false
exit_code: 74
----- stdout -----

----- stderr -----
entity not found (os error 2): `nonexistent_file`
