crabbing-interpreters/tests/testsuite/snapshots/testsuite__nonexistent_file__case_4_native_threaded.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--loop=threaded"
    - nonexistent_file
---
success: false
exit_code: 74
----- stdout -----

----- stderr -----
No such file or directory (os error 2): `nonexistent_file`
