crabbing-interpreters/tests/testsuite/snapshots/testsuite__nonexistent_file__case_5_miri_ast.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: cargo
  args:
    - miri
    - run
    - "-q"
    - "--features"
    - ""
    - "--"
    - "--loop=ast"
    - nonexistent_file
  env:
    MIRIFLAGS: "-Zmiri-disable-isolation -Zmiri-deterministic-floats"
---
success: false
exit_code: 74
----- stdout -----

----- stderr -----
No such file or directory (os error 2) (os error 2): `nonexistent_file`
