crabbing-interpreters/tests/testsuite/snapshots/testsuite__nonexistent_file__case_5_miri_closures.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: cargo
  args:
    - miri
    - run
    - "-q"
    - "--"
    - "--loop=closures"
    - nonexistent_file
  env:
    MIRIFLAGS: "-Zmiri-disable-isolation"
---
success: false
exit_code: 74
----- stdout -----

----- stderr -----
entity not found (os error 2): `nonexistent_file`
