crabbing-interpreters/tests/testsuite/snapshots/testsuite__nonexistent_file__case_6_miri_closures.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: cargo
  args:
    - miri
    - run
    - "-q"
    - "--features"
    - ""
    - "--"
    - "--loop=closures"
    - nonexistent_file
  env:
    MIRIFLAGS: "-Zmiri-disable-isolation -Zmiri-deterministic-floats"
---
success: false
exit_code: 74
----- stdout -----

----- stderr -----
No such file or directory (os error 2) (os error 2): `nonexistent_file`
